# Computer-Graphics-UPB

./: .gitignore  README.md
Tema_1/: CMakeLists.txt  MainLauncher.cpp  README.md
Tema_1/include/: Ball.h  Breakout.h  BreakoutBall.h  Brick.h  CIPlayer.h  ChickenInvaders.h  Componenta.h  EditorNava.h  Enemy.h  Game.h  Paddle.h  PaddleBreakout.h  ParticleSystem.h  ParticleSystem_ChickenInvaders.h  Pong.h  PongPlayer.h  Projectile.h  gl_includes.h  utils.h
Tema_1/shaders/: fragment.glsl  vertex.glsl
Tema_1/src/: Ball.cpp  Breakout.cpp  BreakoutBall.cpp  Brick.cpp  CIPlayer.cpp  ChickenInvaders.cpp  Componenta.cpp  EditorNava.cpp  Enemy.cpp  Paddle.cpp  PaddleBreakout.cpp  ParticleSystem.cpp  ParticleSystem_ChickenInvaders.cpp  Pong.cpp  PongPlayer.cpp  Projectile.cpp  utils.cpp
Tema_2/: README.md  object3D.cpp  object3D.h  tema2.cpp  tema2.h
Tema_2/__MACOSX/: ._shaders  ._tema2.cpp
Tema_2/shaders/: GhostTrail.FS.glsl  GhostTrail.VS.glsl  Terrain.VS.glsl
Tema_3/: README.md  Tema3.cpp  Tema3.h
Tema_3/Shaders/: FragmentShader.glsl  VertexShader.glsl
